--- a/workflows/profile-3d.yml
+++ b/workflows/profile-3d.yml
@@ -20,8 +20,8 @@ jobs:
           USERNAME: ${{ github.repository_owner }}
       - name: Commit & Push
         run: |
-          git config user.name immanuelk1m
-          git config user.email kse0119@naver.com
+          git config user.name pangil5634
+          git config user.email oksk6681@naver.com
           git add -A .
           git commit -m "generated"
           git push
