--- a/pangil5634_introduce/package.json
+++ b/pangil5634_introduce/package.json
@@ -40,5 +40,5 @@
   "devDependencies": {
     "gh-pages": "^6.1.1"
   },
-  "homepage": "http://pangil5634.github.io/pangil5634_introduce/index.html"
+  "homepage": "http://pangil5634.github.io/pangil5634_introduce"
 }
